# ZY-V1

./: .gitignore  README.md  index.html  intern-doctor-agent_v8.html  jest.config.ts  migrate-data-standalone.js  migrate-data.ts  package-lock.json  package.json
docs/v9-upgrade/: UPGRADE_COMPLETE.md  UPGRADE_PLAN.md
public/: manifest.json  sw.js
src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  commands.rs  db.rs  lib.rs  main.rs
src/__mocks__/: tauri-dialog.ts  tauri-fs.ts  tauri.ts
src/__tests__/: setup.ts
src/__tests__/components/: LoginOverlay.test.tsx  MessageBubble.test.tsx
src/__tests__/data/: patientData.test.ts
src/__tests__/stores/: authStore.test.ts  chatStore.test.ts  patientStore.test.ts
src/__tests__/utils/: pdfExport.test.ts
src/api/: patientApi.ts
src/components/: AuditLogPanel.tsx  BackupPanel.tsx  ChatPanel.tsx  ConsultFlow.tsx  DiagnosisPanel.tsx  GeneralAssistant.tsx  LeftPanel.tsx  LoginOverlay.tsx  MessageBubble.tsx  Modals.tsx  StatsPanel.tsx  TitleBar.tsx
src/data/: patientData.ts
src/hooks/: useShortcuts.ts  useSpeechRecognition.ts
src/stores/: authStore.ts  chatStore.ts  patientStore.ts
src/styles/: chat.css  dark.css  modals.css
src/types/: index.ts
src/utils/: auditLogger.ts  offlineSync.ts  pdfExport.ts  performance.ts
